# icdev

./: .clinerules  .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  .mcp.json  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL.md  CONTRIBUTING.md  CONVENTIONS.md  GEMINI.md  LICENSE  MANIFEST.in  NOTICE  README.md  docker-compose.yml  package-lock.json  package.json  playwright-mcp-config.json  playwright.config.ts  pyproject.toml  requirements.txt  ruff.toml
.claude/: settings.json  settings.local.json
.cline/: mcp_settings.json
.codex/: mcp-config.toml
.cursor/: mcp-setup.md
.gemini/: mcp-settings.json
.github/: copilot-instructions.md
.junie/: guidelines.md  mcp-setup.md
.windsurf/: mcp-setup.md
args/: agent_authority.yaml  agent_config.yaml  agentic_fitness.yaml  ai_governance_config.yaml  atlas_critique_config.yaml  bedrock_models.yaml  cicd_config.yaml  classification_config.yaml  cli_config.yaml  cloud_config.yaml  code_pattern_config.yaml  code_quality_config.yaml  companion_registry.yaml  context_config.yaml  creative_config.yaml  csp_monitor_config.yaml  cui_markings.yaml  db_config.yaml  deployment_profiles.yaml  dev_profile_config.yaml  devsecops_config.yaml  endpoint_security_config.yaml  extension_config.yaml  file_access_tiers.yaml  framework_registry.yaml  govcon_config.yaml  innovation_config.yaml  installation_manifest.yaml  llm_config.yaml  maintenance_config.yaml  marketplace_config.yaml  memory_config.yaml  monitoring_config.yaml  mosa_config.yaml  nlq_config.yaml  observability_config.yaml  observability_tracing_config.yaml  oscal_tools_config.yaml  owasp_agentic_config.yaml  phase_registry.yaml  (+14 more)
audit/: issue-3-icdev-a8898ca4-validation-report.md  issue-3-icdev-a8898ca4-vv-enforcement-report.md
compliance/: stig_webapp_proj-test_20260301_041554.md  stig_webapp_proj-test_20260301_050524.md
deploy/: install.ps1  install.sh
docker/: Dockerfile.agent-base  Dockerfile.api-gateway  Dockerfile.architect  Dockerfile.builder  Dockerfile.compliance  Dockerfile.dashboard  Dockerfile.devsecops-agent  Dockerfile.gateway-agent  Dockerfile.infrastructure  Dockerfile.integration-agent  Dockerfile.mbse-agent  Dockerfile.modernization-agent  Dockerfile.orchestrator  Dockerfile.requirements-analyst-agent  Dockerfile.security  Dockerfile.simulation-agent  Dockerfile.supply-chain-agent
docs/: README.md
features/: cicd_integration.feature  compliance_gates.feature  dashboard.feature  environment.py  project_management.feature  requirements_intake.feature  saas_platform.feature  security_scanning.feature  testing_pipeline.feature
goals/: agent_management.md  agentic_generation.md  agentic_threat_model.md  ai_accountability.md  ai_governance_intake.md  ai_transparency.md  atlas_integration.md  ato_acceleration.md  boundary_supply_chain.md  build_app.md  cicd_integration.md  claude_dir_maintenance.md  cli_capabilities.md  cloud_agnostic.md  code_intelligence.md  code_review.md  compliance_workflow.md  continuous_harmonization.md  cpmp_workflow.md  creative_engine.md  cross_language_translation.md  dashboard.md  deploy_workflow.md  devsecops_workflow.md  evolutionary_intelligence.md  external_integration.md  framework_planning.md  govcon_intelligence.md  govcon_product_descriptions.md  init_project.md  innovation_engine.md  integration_testing.md  maintenance_audit.md  manifest.md  marketplace.md  mbse_integration.md  modernization_workflow.md  monitoring.md  mosa_workflow.md  multi_agent_orchestration.md  (+15 more)
k8s/: architect-deployment.yaml  builder-deployment.yaml  compliance-deployment.yaml  configmap.yaml  dashboard-deployment.yaml  devsecops-agent.yaml  gateway-agent.yaml  hpa.yaml  infra-deployment.yaml  ingress.yaml  integration-agent.yaml  knowledge-deployment.yaml  mbse-agent.yaml  modernization-agent.yaml  monitor-deployment.yaml  namespace.yaml  networkpolicy.yaml  node-autoscaler.yaml  orchestrator-deployment.yaml  pdb.yaml  rbac.yaml  requirements-analyst-agent.yaml  secrets.yaml  security-deployment.yaml  simulation-agent.yaml  supply-chain-agent.yaml
memory/: MEMORY.md
projects/install-test/: Dockerfile  README.md  conftest.py  pyproject.toml
projects/install-test/compliance/: cssp_8530_f912aa6e-4270-4431-8dbf-3ee81b34bfa5_all_20260222_021514.md  fedramp_high_f912aa6e-4270-4431-8dbf-3ee81b34bfa5_20260222_021440.md  fedramp_moderate_f912aa6e-4270-4431-8dbf-3ee81b34bfa5_20260222_021431.md  ivv_1012_f912aa6e-4270-4431-8dbf-3ee81b34bfa5_all_20260222_021515.md  poam_f912aa6e-4270-4431-8dbf-3ee81b34bfa5_20260222_021429.md  sbd_cisa_f912aa6e-4270-4431-8dbf-3ee81b34bfa5_all_20260222_021514.md  ssp_f912aa6e-4270-4431-8dbf-3ee81b34bfa5_20260222_021428.md  stig_webapp_f912aa6e-4270-4431-8dbf-3ee81b34bfa5_20260222_021430.md
projects/install-test/compliance/oscal/: ssp.oscal.json
projects/install-test/src/install_test/: __init__.py  main.py
projects/mission-planner/: .gitlab-ci.yml  Dockerfile  README.md  conftest.py  pyproject.toml
projects/mission-planner/src/mission_planner/: __init__.py  app.py
projects/mission-planner/tests/features/: health.feature
projects/mission-planner/tests/steps/: test_health.py
specs/: issue-3-icdev-a8898ca4-icdev_planner-dashboard-kanban.md
tests/: conftest.py  test_a2a_discovery.py  test_a2a_trace_propagation.py  test_acceptance_validator.py  test_accountability_manager.py  test_activity_feed.py  test_agent_output_validator.py  test_agent_shap.py  test_agent_trust_scorer.py  test_ai_accountability_audit.py  test_ai_bom_generator.py  test_ai_governance_chat_extension.py  test_ai_governance_intake.py  test_ai_impact_assessor.py  test_ai_incident_response.py  test_ai_reassessment_scheduler.py  test_ai_telemetry.py  test_ai_transparency.py  test_api_gateway.py  test_assessor_accountability_fixes.py  test_atlas_assessor.py  test_atlas_critique.py  test_atlas_red_team.py  test_audit_logger.py  test_auto_resolver.py  test_backup_manager.py  test_bedrock_client.py  test_behavioral_drift.py  test_behavioral_red_team.py  test_byok.py  test_chat_manager.py  test_circuit_breaker.py  (+123 more)
(+1218 files in other folders)
