[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "icdev"
version = "1.0.0"
description = "Intelligent Coding Development Environment"
requires-python = ">=3.9"
license = {text = "Proprietary"}
dependencies = [
    "flask",
    "pyyaml",
    "jinja2",
    "requests",
]

[project.optional-dependencies]
mcp-core = ["icdev"]
mcp-compliance = ["jinja2"]
mcp-builder = []
mcp-knowledge = []
mcp-maintenance = []
llm = ["anthropic", "openai", "boto3"]

[project.scripts]
icdev-mcp-core = "tools.mcp.standalone.core:main"
icdev-mcp-compliance = "tools.mcp.standalone.compliance:main"
icdev-mcp-builder = "tools.mcp.standalone.builder:main"
icdev-mcp-knowledge = "tools.mcp.standalone.knowledge:main"
icdev-mcp-maintenance = "tools.mcp.standalone.maintenance:main"

[tool.setuptools.packages.find]
include = ["tools*"]
