[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icdev"
version = "0.2.0"
description = "Intelligent Coding Development Environment — AI-powered SDLC platform with NIST 800-53 RMF compliance, multi-agent orchestration, and the GOTCHA framework."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [
    {name = "ICDEV Team"},
]
keywords = ["devops", "compliance", "nist", "fedramp", "govcloud", "llm", "agentic", "sdlc", "gotcha"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "flask>=3.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/icdev-project/icdev"
Documentation = "https://github.com/icdev-project/icdev/tree/master/docs"
Repository = "https://github.com/icdev-project/icdev"
Issues = "https://github.com/icdev-project/icdev/issues"

[project.optional-dependencies]
# Core LLM providers (OpenAI, Anthropic/Bedrock, Gemini, Ollama)
llm = [
    "openai>=1.0",
    "anthropic>=0.30",
    "boto3>=1.34",
    "google-generativeai>=0.5",
    "ollama>=0.2",
]
# Azure OpenAI (uses openai SDK with Azure endpoint)
llm-azure = [
    "openai>=1.0",
]
# Google Vertex AI
llm-vertex = [
    "google-cloud-aiplatform>=1.40",
]
# Oracle Cloud GenAI
llm-oci = [
    "oci>=2.100",
]
# IBM watsonx.ai
llm-ibm = [
    "ibm-watsonx-ai>=1.0",
]
# All LLM providers
llm-all = [
    "icdev[llm,llm-azure,llm-vertex,llm-oci,llm-ibm]",
]
# Semantic/keyword search
search = [
    "numpy>=1.26",
    "rank_bm25>=0.2",
]
# Multi-tenant SaaS platform
saas = [
    "psycopg2-binary>=2.9",
    "PyJWT>=2.8",
    "cryptography>=42.0",
    "gunicorn>=22.0",
    "redis>=5.0",
]
# Test suite
testing = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "behave>=1.2",
    "ruff>=0.12",
    "pydantic>=2.0",
]
# Security scanning
security = [
    "bandit>=1.7",
    "pip-audit>=2.6",
    "detect-secrets>=1.4",
    "cyclonedx-bom>=4.0",
]
# Everything
full = [
    "icdev[llm-all,search,saas,testing,security]",
]

[project.scripts]
icdev-mcp-core = "tools.mcp.standalone.core:main"
icdev-mcp-compliance = "tools.mcp.standalone.compliance:main"
icdev-mcp-builder = "tools.mcp.standalone.builder:main"
icdev-mcp-knowledge = "tools.mcp.standalone.knowledge:main"
icdev-mcp-maintenance = "tools.mcp.standalone.maintenance:main"
icdev-init-db = "tools.db.init_icdev_db:main"

[tool.setuptools.packages.find]
include = [
    "tools*",
    "args*",
    "context*",
    "goals*",
    "hardprompts*",
    "features*",
    "docs*",
    "memory*",
]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = [
    "*.yaml", "*.yml", "*.json", "*.md", "*.j2", "*.txt",
    "*.html", "*.css", "*.js", "*.sql", "*.feature",
    "*.LICENSE", "*.cfg", "*.toml", "*.ini",
]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*", "*.pyc", "*.pyo"]
